# sloos-analysis-by-kiro

./: .gitignore  DEPLOYMENT.md  INFO.md  LOCAL_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_OLD.md  SETUP.md  app.py  pyproject.toml  start.bat  start.sh  take_screenshots.py
screenshots/: README.md
templates/: index.html
